--- a/templates/index.html
+++ b/templates/index.html
@@ -2,4 +2,10 @@
 
 {% block content %}
     <h1>{% block title %} Welcome to Lijie's Recipe {% endblock %}</h1>
+    {% for recipe in recipes %}
+       <a href="#">
+           <h2>{{ recipe['title']}}</h2>
+       </a>
+       <span>{{ recipe['created'] }}</span>
+    {% endfor %}
 {% endblock %}
