--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} Welcome to Lijie's Recipe {% endblock %}</h1>
+    <h1>{% block title %} Welcome to Lijie's Recipes {% endblock %}</h1>
     {% for recipe in recipes %}
-       <a href="#">
+       <a href="{{ url_for('recipe', recipe_id=recipe['id']) }}">
            <h2>{{ recipe['title']}}</h2>
        </a>
        <span>{{ recipe['created'] }}</span>
